--- a/src/app/DashBoard/admin-panel/admin-panel.component.html
+++ b/src/app/DashBoard/admin-panel/admin-panel.component.html
@@ -17,7 +17,7 @@
     </thead>
     <ng-container *ngFor="let booking of bookingArray">
         <tr class="table-light">
-            <td>{{booking.checkIn}}</td>
+            <!-- <td>{{booking.checkIn}}</td>
             <td>{{booking.checkOut}}</td>
             <td>{{booking.NoRooms}}</td>
             <td>{{booking.RoomType}}</td>
@@ -26,7 +26,7 @@
             <td>{{booking.FirstName}}</td>
             <td>{{booking.LastName}}</td>
             <td>{{booking.email}}</td>
-            <td>{{booking.ContactNumber}}</td>
+            <td>{{booking.ContactNumber}}</td> -->
             <td>
                 <button class="btn btn-outline-info" (click)="BookingService.populateForm(booking)">Edit</button>
                 <button class="btn btn-outline-danger" (click)="onDelete(booking.$key)">Delete</button>
