--- a/src/app/DashBoard/admin-panel/admin-panel.component.html
+++ b/src/app/DashBoard/admin-panel/admin-panel.component.html
@@ -28,8 +28,8 @@
             <td>{{booking.email}}</td>
             <td>{{booking.ContactNumber}}</td> -->
             <td>
-                <button class="btn btn-outline-info" (click)="BookingService.populateForm(booking)">Edit</button>
-                <button class="btn btn-outline-danger" (click)="onDelete(booking.$key)">Delete</button>
+                <button class="btn btn-outline-info" >Edit</button>
+                <button class="btn btn-outline-danger">Delete</button>
             </td>
         </tr>
     </ng-container>
